Register page done

--- a/css/register.css
+++ b/css/register.css
@@ -1,15 +1,26 @@
 .colorgraph {
-  height: 5px;
+  height: 1px;
   border-top: 0;
-  background: orange;
+  background: #ffc04d;
   border-radius: 5px;
 }
 
 .register input:focus{
     border-color: orange;
-	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(265, 165, 0, 0.6);
+	  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(265, 165, 0, 0.6);
 }
 
 .container{
 	margin-top: 100px;
+}
+
+.register .btn {
+  border-radius:3px;
+  font-size:0.75em;
+  margin-top: 0.25em;
+  margin-bottom: 0.25em;
+}
+
+.register .btn-google{
+  font-size: 1em;
 }
