--- a/css/navbar.css
+++ b/css/navbar.css
@@ -69,6 +69,14 @@
     height: 30px;
 }
 
+@media screen and (max-width: 768px){
+	.navbar-default .navbar-left img{
+		margin-top: 10px;
+		width: 30px;
+		height: 30px;
+	}
+}
+
 .navbar-default .navbar-brand:hover {
     color: #fafafa;
 }
