--- a/css/navbar.css
+++ b/css/navbar.css
@@ -27,7 +27,7 @@
 }
 
 .navbar-nav > li > a, .navbar-brand {
-    padding-top: 8px !important; 
+    padding-top: 8px !important;
     padding-bottom: 0 !important;
     height: 41px !important;
 }
@@ -70,12 +70,12 @@
 }
 
 @media screen and (max-width: 768px){
-	.navbar-default .navbar-left img{
-		margin-top: 10px;
-		width: 30px;
-		height: 30px;
-	}
-}
+ 	.navbar-default .navbar-left img{
+ 		margin-top: 10px;
+ 		width: 30px;
+ 		height: 30px;
+ 	}
+ }
 
 .navbar-default .navbar-brand:hover {
     color: #fafafa;
@@ -180,7 +180,7 @@
 	min-height: 48px !important;
 	width: 100%;
     }
-    
+
     .navbar .navbar-header {
 	float: left;
 	/* text-align: center; */
@@ -223,7 +223,7 @@
 }
 
 #mobile-search {
-    display: none; 
+    display: none;
 }
 
 #mobile-search input {
@@ -235,3 +235,26 @@
 #mobile-close-search {
     display: none;
 }
+
+#extras-nav-button{
+  border: none;
+  background-color: transparent;
+}
+
+  .side-nav .side-nav-suggested label{
+    color: #fafafa;
+    padding: 2px 8px 5px 32px;
+    text-decoration: none;
+    font-size: 1.3em;
+    display: block;
+    transition: 0.3s;
+    font-weight: normal;
+  }
+
+  .side-nav .side-nav-suggested a {
+    font-size: 0.75em;
+  }
+
+  .side-nav .suggestions-more{
+    color: orange;
+  }
