--- a/css/profile.css
+++ b/css/profile.css
@@ -5,5 +5,65 @@
 	font-size:2em;
 }
 .profile-desc{
-	color:
+
+}
+.profile-image-and-info{
+	float:left;
+}
+.info-start{
+	color:orange;
+}
+.profile-user-and-desc{
+
+}
+.profile-down{
+	margin-top:2em;
+}
+
+.profile-topics li a:hover {
+  font-size: 30px;
+  background: #f6f6f6;
+}
+
+.profile-topics div {
+  width: 200px;
+}
+
+.profile-topics h2 {
+  font: 400 40px/1.5 Helvetica, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.profile-topics ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.profile-topics li {
+  font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
+  border-bottom: 1px solid #ccc;
+}
+
+.profile-topics li:last-child {
+  border: none;
+}
+
+.profile-topics li a {
+  text-decoration: none;
+  color: black;
+  display: block;
+
+  -webkit-transition: font-size 0.2s ease, background-color 0.3s ease;
+  -moz-transition: font-size 0.2s ease, background-color 0.3s ease;
+  -o-transition: font-size 0.2s ease, background-color 0.3s ease;
+  -ms-transition: font-size 0.2s ease, background-color 0.3s ease;
+  transition: font-size 0.2s ease, background-color 0.3s ease;
+}
+
+.profile-topics li a:hover {
+  font-size: 1.2em;
+	color:orange;
+  background: #f6f6f6;
 }
