--- a/css/search.css
+++ b/css/search.css
@@ -1,19 +1,27 @@
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
+.jumbotrona {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 0px;
+  padding-left: 5px;
+
 }
 
-body {
-  padding-top: 50px;
-  padding-bottom: 20px;
+.questionSearch .jumbotrona .dropdown a{
+	color: orange;
 }
 
-@media screen and (min-width: 768px) {
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
+.questionSearch .jumbotrona .dropdown li a{
+	color: gray;
 }
+
+#searchBody{
+	text-align: justify;
+}
+
+.questionSearch{
+	margin-top:100px;
+}
+
 /* Customize container */
 @media (min-width: 768px) {
   .container {
@@ -38,8 +46,13 @@ body {
 .question .questionInfo{
 	text-align: left;
 	color: gray;
-	font-size: 50%;
+	font-size: 75%;
 }
+
+.question .questionInfo button{
+	font-size: 110%;
+}
+
 
 .question .writerInfo{
 	text-align: left;
@@ -58,4 +71,36 @@ body {
 
 .question .viewmore{
 	color: orange;
+}
+
+.topic .topicTitle a{
+	text-decoration: none;
+	text-align: left;
+	font-weight: bold;
+	color: orange;
+}
+
+.topic .topicTitle a:hover{
+	font-size: 1.1em;
+}
+
+@media screen and (max-width: 768px) {
+  /* Remove the bottom border on the jumbotron for visual effect */
+	.jumbotrona {
+		text-align: center;
+	}
+	#searchBody h2{
+		text-align: center;
+	}
+	.question .questionInfo{
+		text-align: center;
+		display: block;
+	}
+	.question .questionInfo a{
+		display: block;
+	}
+	.question .questionInfo button{
+		width: 200px;
+		margin-bottom: 10px;
+	}
 }
