--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,239 +1,239 @@
 .navbar .container-fluid {
-    max-width: 1000px;
+  max-width: 1000px;
 }
 
 .navbar {
-    border: 0;
-    border-radius: 0;
-    min-height: 28px !important;
+  border: 0;
+  border-radius: 0;
+  min-height: 28px !important;
 }
 
 .navbar-default {
-    background-color: #2c2c2c;
+  background-color: #2c2c2c;
 }
 
 .navbar-default .navbar-nav > li > a {
-    color: #fafafa;
+  color: #fafafa;
 }
 
 .navbar-default .navbar-nav > li > a:hover {
-    color: #fafafa;
-    background-color: #3f3f3f;
+  color: #fafafa;
+  background-color: #3f3f3f;
 }
 
 .navbar-default .navbar-nav > li > a:focus {
-    color: #fafafa;
-    background-color: #3f3f3f;
+  color: #fafafa;
+  background-color: #3f3f3f;
 }
 
 .navbar-nav > li > a, .navbar-brand {
-    padding-top: 8px !important;
-    padding-bottom: 0 !important;
-    height: 41px !important;
+  padding-top: 8px !important;
+  padding-bottom: 0 !important;
+  height: 41px !important;
 }
 
 .navbar-nav .navbar-highlight > a {
-    background-color: orange;
+  background-color: orange;
 }
 
 .navbar-nav > li.navbar-highlight > a:hover {
-    background-color: #cc8400;
+  background-color: #cc8400;
 }
 
 .navbar-nav > li.navbar-highlight > a:focus {
-    background-color: #cc8400;
-    color: #fafafa;
+  background-color: #cc8400;
+  color: #fafafa;
 }
 
 .form-control {
-    height: 24px;
-    border-radius: 0;
-    padding: 4px 12px;
+  height: 24px;
+  border-radius: 0;
+  padding: 4px 12px;
 }
 
 .navbar-form .btn {
-    padding: 6px 12px;
-    font-size: 7px;
-    border-radius: 0;
+  padding: 6px 12px;
+  font-size: 7px;
+  border-radius: 0;
 }
 
 .navbar-default .navbar-brand {
-    height: 41px;
-    padding-right: 10px;
-    color: #fafafa;
+  height: 41px;
+  padding-right: 10px;
+  color: #fafafa;
 }
 
 .navbar-default .navbar-left img{
-    margin-top: 5px;
-    width: 30px;
-    height: 30px;
+  margin-top: 5px;
+  width: 30px;
+  height: 30px;
 }
 
 @media screen and (max-width: 768px){
- 	.navbar-default .navbar-left img{
- 		margin-top: 10px;
- 		width: 30px;
- 		height: 30px;
- 	}
- }
+  .navbar-default .navbar-left img{
+    margin-top: 10px;
+    width: 30px;
+    height: 30px;
+  }
+}
 
 .navbar-default .navbar-brand:hover {
-    color: #fafafa;
+  color: #fafafa;
 }
 
 .navbar-default .navbar-brand:focus {
-    color: #fafafa;
+  color: #fafafa;
 }
 
 .brand-highlight {
-    color: orange;
+  color: orange;
 }
 
 .navbar-search {
-    display: none;
-    color: white;
-    float: right;
-    padding: 16px 5px;
-    font-size: 1.2em;
+  display: none;
+  color: white;
+  float: right;
+  padding: 16px 5px;
+  font-size: 1.2em;
 }
 
 .dropdown-toggle {
-    width: 132px;
+  width: 132px;
 }
 
 .dropdown-menu li {
-    width: 130px;
+  width: 130px;
 }
 
 .dropdown-menu {
-    min-width: 132px;
-    border-radius: 0;
-    padding: 0;
+  min-width: 132px;
+  border-radius: 0;
+  padding: 0;
 }
 
 .dropdown-menu > li > a {
-    padding: 5px 15px;
+  padding: 5px 15px;
 }
 
 .dropdown-menu .divider {
-    margin: 0;
+  margin: 0;
 }
 
 .navbar-default .navbar-nav > .open > a {
-    color: #fafafa;
-    background-color: #3f3f3f;
+  color: #fafafa;
+  background-color: #3f3f3f;
 }
 
 .navbar-default .navbar-nav > .open > a:focus {
-    color: #fafafa;
-    background-color: #3f3f3f;
+  color: #fafafa;
+  background-color: #3f3f3f;
 }
 
 
 .side-nav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #2f2f2f;
-    overflow-x: hidden;
-    padding-top: 60px;
-    transition: 0.5s;
-    white-space: nowrap;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #2f2f2f;
+  overflow-x: hidden;
+  padding-top: 60px;
+  transition: 0.5s;
+  white-space: nowrap;
 }
 
 .side-nav a {
-    color: #fafafa;
-    padding: 2px 8px 5px 32px;
-    text-decoration: none;
-    font-size: 1.3em;
-    display: block;
-    transition: 0.3s
+  color: #fafafa;
+  padding: 2px 8px 5px 32px;
+  text-decoration: none;
+  font-size: 1.3em;
+  display: block;
+  transition: 0.3s
 }
 
 .side-nav .navbar-highlight {
-    background-color: orange;
+  background-color: orange;
 }
 
 .side-nav hr {
-    display: block;
-    height: 1px;
-    border: none;
-    margin: 1em 0;
-    padding: 0;
-    background-color: #fafafa;
-    opacity: 0.4;
+  display: block;
+  height: 1px;
+  border: none;
+  margin: 1em 0;
+  padding: 0;
+  background-color: #fafafa;
+  opacity: 0.4;
 }
 
 .side-nav .side-nav-options {
-    margin-bottom: 1em;
+  margin-bottom: 1em;
 }
 
 .side-nav .side-nav-options a {
-    color: orange;
+  color: orange;
 }
 
 @media (max-width: 768px) {
-    .navbar {
-	min-height: 48px !important;
-	width: 100%;
-    }
+  .navbar {
+    min-height: 48px !important;
+    width: 100%;
+  }
 
-    .navbar .navbar-header {
-	float: left;
-	/* text-align: center; */
-	width: 100%;
-	margin: 0;
-    }
+  .navbar .navbar-header {
+    float: left;
+    /* text-align: center; */
+    width: 100%;
+    margin: 0;
+  }
 
-    .navbar-brand {
-	font-size: 1.6em;
-	float: left;
-	line-height: 32px;
-    }
+  .navbar-brand {
+    font-size: 1.6em;
+    float: left;
+    line-height: 32px;
+  }
 
-    .navbar-search {
-	display: initial;
-	color: white;
-	float: right;
-	padding: 16px 10px;
-	font-size: 1.2em;
-    }
+  .navbar-search {
+    display: initial;
+    color: white;
+    float: right;
+    padding: 16px 10px;
+    font-size: 1.2em;
+  }
 
-    .navbar-toggle {
-	float: left;
-	margin: 0;
-	border: 0px solid black;
-	padding: 17px 0;
-    }
+  .navbar-toggle {
+    float: left;
+    margin: 0;
+    border: 0px solid black;
+    padding: 17px 0;
+  }
 
-    .navbar-default .navbar-toggle .icon-bar {
-	background-color: #fafafa;
-    }
+  .navbar-default .navbar-toggle .icon-bar {
+    background-color: #fafafa;
+  }
 
-    #side-nav-button:hover {
-	background-color: transparent;
-    }
+  #side-nav-button:hover {
+    background-color: transparent;
+  }
 
-    #side-nav-button:focus {
-	background-color: transparent;
-    }
+  #side-nav-button:focus {
+    background-color: transparent;
+  }
 }
 
 #mobile-search {
-    display: none;
+  display: none;
 }
 
 #mobile-search input {
-    float: left;
-    width: 0;
-    margin: 12px;
+  float: left;
+  width: 0;
+  margin: 12px;
 }
 
 #mobile-close-search {
-    display: none;
+  display: none;
 }
 
 #extras-nav-button{
@@ -241,20 +241,48 @@
   background-color: transparent;
 }
 
-  .side-nav .side-nav-suggested label{
-    color: #fafafa;
-    padding: 2px 8px 5px 32px;
-    text-decoration: none;
-    font-size: 1.3em;
-    display: block;
-    transition: 0.3s;
-    font-weight: normal;
-  }
+#extras-side-nav ul{
+  list-style-type: none;
+}
 
-  .side-nav .side-nav-suggested a {
-    font-size: 0.75em;
-  }
+.side-nav-guidelines{
+  height: 90%;
+  padding-left: 0;
+  font-size: 0.75em;
+  word-wrap: break-word;
+  white-space: initial;
+  background-color:transparent;
+  color:#f3f3f3;
+  text-align: justify;
+}
 
-  .side-nav .suggestions-more{
-    color: orange;
-  }
+.side-nav-guidelines h3{
+  font-size: 1.5em;
+  text-align: center;
+}
+
+.side-nav-guidelines strong{
+  color: orange;
+}
+
+.side-nav-guidelines li, .side-nav-guidelines ul  {
+  padding-left: 0;
+}
+
+.side-nav .side-nav-suggested label{
+  color: #fafafa;
+  padding: 2px 8px 5px 32px;
+  text-decoration: none;
+  font-size: 1.3em;
+  display: block;
+  transition: 0.3s;
+  font-weight: normal;
+}
+
+.side-nav .side-nav-suggested a {
+  font-size: 0.75em;
+}
+
+.side-nav .suggestions-more{
+  color: orange;
+}
