--- a/css/question.css
+++ b/css/question.css
@@ -128,3 +128,35 @@
 	font-size: 0.75em;
 	color: #f3f3f3;
 }
+.guidelines_side{
+  font-size: 0.5em;
+}
+.guidelines_side h1{
+  margin-top: 0.25em;
+  margin-bottom: 0.25em;
+}
+.guidelines_side ul{
+  list-style-type: none;
+}
+.guidelines_side .well{
+  border-color: orange;
+  border-radius: 0;
+  border-left:none;
+  border-right:none;
+  background-color:white;
+}
+.pick_topic select{
+  height: 2em;
+}
+.buffer_area{
+  margin-top:87px;
+}
+.ask_area .well{
+  box-shadow: orange;
+  background-color: #EDEDED;
+}
+.ask_area .btn {
+  background-color: orange;
+  color: white;
+  font-weight: bolder;
+}
