Fixed test :palm_tree:

--- a/css/profile.css
+++ b/css/profile.css
@@ -86,3 +86,10 @@
 	color:orange;
   background: #f6f6f6;
 }
+.profile-q-and-a .viewmore{
+	color: orange;
+	font-size: 0.5em;
+	padding-left: 15px;
+}
+
+
