--- a/css/topic.css
+++ b/css/topic.css
@@ -4,12 +4,6 @@
 	margin-top:100px;
 }
 
-/* Customize container */
-@media (min-width: 768px) {
-  .container {
-    max-width: 820px;
-  }
-}
 .question .questionTitle{
 	margin-top: 0px;
 }
@@ -18,11 +12,12 @@
 	text-decoration: none;
 	text-align: left;
 	font-weight: bold;
-	color: black;
+	color: #3f3f3f;
+	font-size: 0.75em;
 }
 
 .question .questionTitle a:hover{
-	text-decoration: underline;
+	text-decoration: none;
 }
 
 .question .questionInfo{
