--- a/css/navbar.css
+++ b/css/navbar.css
@@ -297,3 +297,31 @@
 .side-nav .suggestions-more{
   color: orange;
 }
+
+/* MESSAGES */
+
+.error {
+  background-color: #FFAAAA;
+  padding: 10px;
+  color: #333;
+  font-weight: bold;
+}
+
+.success {
+  background-color: #AAFFAA;
+  padding: 10px;
+  color: #333;
+  font-weight: bold;
+}
+
+.close {
+  float: right;
+  text-decoration: none;
+  color: #666;
+}
+
+.field_error {
+  color: red;
+  font-size: 70%;
+}
+
