--- a/css/navbar.css
+++ b/css/navbar.css
@@ -312,6 +312,7 @@
   padding: 10px;
   color: #333;
   font-weight: bold;
+  margin-bottom: -20px;
 }
 
 .close {
@@ -323,5 +324,6 @@
 .field_error {
   color: red;
   font-size: 70%;
+  margin-bottom: -20px;
 }
 
