--- a/proto/css/register.css
+++ b/proto/css/register.css
@@ -31,3 +31,9 @@
     font-weight: bold;
     text-decoration: none;
 }
+
+#country_select{
+    height:100%;
+    padding-top:0px;
+    padding-bottom:0px;
+}
