--- a/proto/css/question.css
+++ b/proto/css/question.css
@@ -88,6 +88,10 @@
 .extras .tools_label span{
   font-size: 0.70em;
 }
+.extras_tools span {
+    color: white;
+    text-decoration: none;
+}
 .extras button{
   font-size: 0.5em;
   background-color: orange;
