--- a/proto/css/question.css
+++ b/proto/css/question.css
@@ -88,7 +88,7 @@
 .extras .tools_label span{
   font-size: 0.70em;
 }
-.extras_tools span {
+.extras_tools .btn-default a {
     color: white;
     text-decoration: none;
 }
