--- a/proto/css/question.css
+++ b/proto/css/question.css
@@ -177,3 +177,8 @@
     background-color: orange;
     font-weight: bold;
 }
+.edit_prof input{
+    padding-top: 6px;
+    padding-bottom: 6px;
+    font-size: 1.1em;
+}
