--- a/proto/css/footer.css
+++ b/proto/css/footer.css
@@ -1,4 +1,8 @@
 footer {
+    position: absolute;
+    bottom: 0;
+    right : 0;
+    left : 0;
     width: 100%;
     min-height: 60px;
     background-color: #2c2c2c;
