--- a/proto/css/footer.css
+++ b/proto/css/footer.css
@@ -1,16 +1,16 @@
-footer {
+#footer {
     position: absolute;
     bottom: 0;
     right : 0;
     left : 0;
     width: 100%;
-    min-height: 60px;
+    height: 60px;
     background-color: #2c2c2c;
     color: #fafafa;
     padding-bottom: 10px;
 }
 
-footer ul {
+#footer ul {
     list-style-type: none;
     margin: 0 auto;
     padding: 0;
@@ -18,12 +18,12 @@ footer ul {
     margin: 20px 0;
 }
 
-footer li {
+#footer li {
     display: inline;
     padding: 5px;
 }
 
-footer p {
+#footer p {
     text-align: center;
     margin-bottom: 0px;
 }
