--- a/proto/css/footer.css
+++ b/proto/css/footer.css
@@ -1,4 +1,4 @@
-#footer {
+.footer {
     position: absolute;
     bottom: 0;
     right : 0;
@@ -10,7 +10,7 @@
     padding-bottom: 10px;
 }
 
-#footer ul {
+.footer ul {
     list-style-type: none;
     margin: 0 auto;
     padding: 0;
@@ -18,12 +18,12 @@
     margin: 20px 0;
 }
 
-#footer li {
+.footer li {
     display: inline;
     padding: 5px;
 }
 
-#footer p {
+.footer p {
     text-align: center;
     margin-bottom: 0px;
 }
