--- a/proto/css/footer.css
+++ b/proto/css/footer.css
@@ -5,6 +5,7 @@
     left : 0;
     width: 100%;
     height: 60px;
+    padding-top: 10px;
     background-color: #2c2c2c;
     color: #fafafa;
     padding-bottom: 10px;
