--- a/proto/css/footer.css
+++ b/proto/css/footer.css
@@ -2,7 +2,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 60px;
+    height: 10%;
     padding-top: 10px;
     background-color: #2c2c2c;
     color: #fafafa;
@@ -25,5 +25,5 @@
 .footer p {
     text-align: center;
     background-color: #2c2c2c;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
