--- a/proto/css/footer.css
+++ b/proto/css/footer.css
@@ -2,7 +2,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 10%;
+    height: auto;
     padding-top: 10px;
     background-color: #2c2c2c;
     color: #fafafa;
