--- a/proto/css/profile.css
+++ b/proto/css/profile.css
@@ -18,6 +18,7 @@
 .profile-info .btn {
     background-color:orange;
     margin-top: 0.5em;
+    color:white;
 }
 .container{padding-top:10px;}
 .profile-image-and-info{
