--- a/proto/css/question.css
+++ b/proto/css/question.css
@@ -6,7 +6,10 @@
   text-decoration: none;
 }
 .user_profile_pic {
+  border:1px solid gray;
   border-radius: 100px;
+  height: 64px;
+  width: 64px;
 }
 
 .user_profile_pic2 {
