--- a/final/css/navbar.css
+++ b/final/css/navbar.css
@@ -130,6 +130,11 @@
   margin: 0;
 }
 
+.dropdown-meu .new_topic_drop_btn {
+  color: white;
+  background-color: orange;
+}
+
 .navbar-default .navbar-nav > .open > a {
   color: #fafafa;
   background-color: #3f3f3f;
@@ -329,7 +334,3 @@
   font-size: 70%;
 }
 
-.new_topic_drop_btn {
-  color: white;
-  background-color: orange;
-}
