--- a/final/css/navbar.css
+++ b/final/css/navbar.css
@@ -130,7 +130,7 @@
   margin: 0;
 }
 
-.dropdown-meu .new_topic_drop_btn {
+.dropdown-menu .new_topic_drop_btn {
   color: white;
   background-color: orange;
 }
