--- a/final/css/tabs.css
+++ b/final/css/tabs.css
@@ -2,6 +2,10 @@
     padding-top:0;
     padding-bottom: 0;
 }
+.tab-content .jumbotron{
+    font-size: 21px;
+    text-align: center;
+}
 .orange{
     color: orange;
     font-weight: bold;
