--- a/final/css/tabs.css
+++ b/final/css/tabs.css
@@ -2,7 +2,7 @@
     padding-top:0;
     padding-bottom: 0;
 }
-.tab-content .jumbotron{
+.none_found{
     font-size: 21px;
     text-align: center;
 }
