--- a/final/css/search.css
+++ b/final/css/search.css
@@ -14,6 +14,10 @@
     padding-top:10px;
     padding-left: 5px;
 }
+.questionSearch .tab-content{
+    overflow-y: scroll;
+    max-height: 450px;
+}
 #searchBody{
     text-align: justify;
 }
