--- a/final/css/search.css
+++ b/final/css/search.css
@@ -19,8 +19,8 @@
     max-height: 450px;
 }
 .questionSearch .well{
-    padding-top:0px;
-    padding-bottom:0px;
+    margin-top:0px;
+    margin-bottom:0px;
 }
 #searchBody{
     text-align: justify;
