--- a/final/css/question.css
+++ b/final/css/question.css
@@ -127,6 +127,7 @@
     list-style-type: none;
 }
 .extras_suggested .suggestion{
+    min-height: 2.5em;
     font-size: 0.5em;
     border: none;
     border-radius: 0px;
